# Agentrix

./: DevOps.md  README.md
Financial-Advisory-Tool-main/: .dockerignore  .gitignore  .secrets.baseline  (+5 more)
Kubernetes_Assistant/: .gitignore  .gitignore copy  .secret.txt  Dockerfile  README.md  demo-explainer.md  forms.py  k8scluster.py  kube-assistant.py  metadata.yaml  pyproject.toml  requirements.txt
Kubernetes_Assistant/src/kube_chatter_crew/: crew.py
Kubernetes_Assistant/src/kube_chatter_crew/config/: agents.yaml  tasks.yaml
Kubernetes_Assistant/src/kube_debugger_crew/: crew.py
Kubernetes_Assistant/src/kube_debugger_crew/config/: agents.yaml  tasks.yaml
Kubernetes_Assistant/src/kube_debugger_crew/tools/: custom_tool.py
Kubernetes_Assistant/src/kube_developer_crew/: crew.py
Kubernetes_Assistant/src/kube_developer_crew/config/: agents.yaml  tasks.yaml
Kubernetes_Assistant/src/kube_explainer_crew/: crew.py
Kubernetes_Assistant/src/kube_explainer_crew/config/: agents.yaml  tasks.yaml
Kubernetes_Assistant/src/kube_reviewer_crew/: crew.py
Kubernetes_Assistant/src/kube_reviewer_crew/config/: agents.yaml  tasks.yaml
Kubernetes_Assistant/src/kube_security_crew/: crew.py
Kubernetes_Assistant/src/kube_security_crew/config/: agents.yaml  tasks.yaml
Kubernetes_Assistant/static/css/: styles.css
Kubernetes_Assistant/templates/: about.html  contact.html  explain.html  footer.html  generate.html  header.html  index.html  k8sissue.html  k8sns.html  k8spods.html  k8sscandeploysts.html  k8ssecurity.html  k8ssecurityns.html  question.html  review.html
(+244 files in other folders)
