[project]
name = "kube_debugger_crew"
version = "0.1.0"
description = "kube_debugger_crew using crewAI"
authors = [{ name = "Anand Awasthi", email = "anand.awasthi@in.ibm.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
kube_debugger_crew = "kube_debugger_crew.main:run"
run_crew = "kube_debugger_crew.main:run"
train = "kube_debugger_crew.main:train"
replay = "kube_debugger_crew.main:replay"
test = "kube_debugger_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
